# noctalia-appmenu

./: .commitlintrc.yml  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  cliff.toml  deny.toml  flake.nix  justfile  lefthook.yml  osv-scanner.toml  sonar-project.properties  typos.toml
.claude/: settings.json
.claude/agents/: ci-engineer.md  dbusmenu-protocol-expert.md  niri-wayland-tester.md  nix-packager.md  qml-architect.md  sonar-quality-gate.md
.claude/commands/: appmenu-forward.md  release-deploy.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  release.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/rulesets/: main.json
.github/workflows/: actionlint.yml  cargo-deny.yml  cargo-machete.yml  ci.yml  codecov.yml  codeql.yml  dco.yml  osv-scan.yml  pages.yml  perf.yml  quality-gates.yml  release.yml  reproducibility.yml  scorecard.yml  semgrep.yml  sonar.yml  typos.yml
.helix/: languages.toml
.semgrep/: rust.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
bridge/: Cargo.toml
bridge/.config/: nextest.toml
bridge/benches/: hotpath.rs  iai.rs
bridge/examples/: atspi_probe.rs  desktop_probe.rs
bridge/src/: active.rs  atspi.rs  config.rs  dbusmenu.rs  desktop.rs  focus.rs  lib.rs  main.rs  niri.rs  proxy.rs  registrar.rs
bridge/tests/: active_snapshot.rs  atspi_integration.rs  desktop_fallback.rs  niri_reconnect.rs
bridge/tests/snapshots/: atspi_integration__active_proxy_interface_xml_is_stable.snap  atspi_integration__firefox_menubar_serializes_to_stable_json.snap
docs/: SUMMARY.md  appmenu-state.md  book.toml
docs/adr/: ADR-0001-reuse-vala-panel-appmenu-registrar.md  ADR-0002-no-pid-on-toplevel-use-niri-ipc.md  ADR-0003-rust-sidecar-bridge.md  ADR-0004-resolve-registrar-by-pid.md  ADR-0005-niri-only-v1.md  ADR-0006-graceful-degradation.md  ADR-0007-fixed-proxy-vs-quickshell-pr.md  ADR-0008-popup-window-for-submenus.md  ADR-0009-debouncing-policy.md  ADR-0010-no-keybind-intercept-v1.md  ADR-0011-home-manager-module.md  ADR-0012-self-hosted-runner-only.md  ADR-0013-runner-agnostic-ci.md  ADR-0014-local-first-ci.md  ADR-0015-v01-fallback-only-shipping.md  ADR-0016-niri-event-stream-schema.md  ADR-0017-plugin-manifest-schema.md  ADR-0018-bar-widget-api-contract.md  ADR-0019-always-visible-bar-widget.md  ADR-0020-fixed-width-slot.md  ADR-0021-fileview-text-call.md  ADR-0022-bridge-owns-registrar.md  ADR-0023-dbusmenu-fetch-on-focus.md  ADR-0024-atspi-substrate.md  ADR-0025-cognitive-complexity-waiver.md  ADR-0026-cyclonedx-1.6-syft-constraint.md  ADR-0027-no-osconfig-in-hm-module.md  ADR-0028-fr-003-accelerator-deferred.md  ADR-0029-learned-no-menubar-skip.md  ADR-0030-frame-scoped-menu-resolution.md  ADR-0031-desktop-fallback.md  ADR-0032-gtk-menus-not-viable-on-niri.md  ADR-0033-liveness-cache-self-heal.md  ADR-0034-lazy-menu-expand-on-demand.md  ADR-0035-lazy-reveal-locked-menubar-fallback.md  README.md
docs/architecture/: atspi.md  dbusmenu.md  niri-ipc.md  overview.md
docs/how-to/: dev-loop.md  fake-registrar.md  release.md
docs/reference/: config.md
docs/research/: how-to-make-good-software-2026-05-16.md  noctalia-and-appmenu-sota-2026-05-30.md
docs/v0.2-prototypes/: MenuButton.qml.draft  SubmenuPopup.qml.draft
nix/: module.nix
plugin/: AppmenuPopupWindow.qml  AppmenuShield.qml  BarWidget.qml  MenuRow.qml  SubmenuPopup.qml  manifest.json
scripts/: release.sh  verify-adr-summary.sh  verify-no-third-patch.sh  verify-release.sh  verify-tag-subject.sh  verify-tokens.sh
specs/001-global-menu/: closeout.md  plan.md  spec.md  tasks.md
specs/002-bridge-dbusmenu-mirror/: closeout.md  spec.md
specs/003-plugin-fault-isolation/: closeout.md  spec.md
specs/004-project-completion/: analyze.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-bridge-completion/: closeout.md  plan.md  (+2 more)
(+63 files in other folders)
