[package]
name = "noctalia-appmenu-bridge"
version = "1.0.25"
edition = "2021"
rust-version = "1.81"
authors = ["Pedro H S Balbino <phsb5321@gmail.com>"]
description = "Bridge daemon: niri-IPC → AT-SPI menubar walker → fixed-path active-app menu mirror for noctalia-shell."
homepage = "https://github.com/yolo-labz/noctalia-appmenu"
repository = "https://github.com/yolo-labz/noctalia-appmenu"
license = "Apache-2.0"
keywords = ["wayland", "niri", "noctalia", "dbus", "appmenu"]
categories = ["gui", "os::linux-apis"]
readme = "../README.md"

[lib]
name = "noctalia_appmenu_bridge"
path = "src/lib.rs"

[[bin]]
name = "noctalia-appmenu-bridge"
path = "src/main.rs"

[dependencies]
zbus = { version = "4.4", default-features = false, features = ["tokio"] }
zvariant = "4.2"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "signal", "time", "process", "sync", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }
toml = "1.1"
anyhow = "1.0"
niri-ipc = "26.4"
# v1.0.8: parallel children-fetch in atspi::fetch_menu_tree.
# `futures::stream::FuturesOrdered` + `StreamExt::collect` joins
# bounded-concurrency futures in tree-index order without needing
# 'static futures (recursive AT-SPI walks borrow the &Connection).
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
mockall = "0.14"
tokio-test = "0.4"
tempfile = "3.27"
divan = "0.1"
# iai-callgrind requires `valgrind` at runtime (devShell ships it).
# Always compiled in dev to keep the configuration simple — Cargo
# does not allow `optional = true` on dev-deps.
iai-callgrind = "0.16"

[[bench]]
name = "hotpath"
harness = false

[[bench]]
name = "iai"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[profile.bench]
inherits = "release"
debug = "line-tables-only" # enough for samply / iai symbols
lto = "thin"

# Reproducibility: the workflow exports SOURCE_DATE_EPOCH; cargo + the
# linker both honour it. No additional [build] config needed.
